--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,53 @@
-theme: jekyll-theme-cayman
+title: Valley Blog
+author: The Titanium Egg
+# email:
+url: /
+description: >
+  The Official Valley Discord Blog
+favicon: "./favicon.ico" # set the favicon of the site
+
+show_excerpts: false # set to true to show excerpts on the homepage
+
+# Moving date format
+# refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
+moving:
+  avatar_url: "https://avatars2.githubusercontent.com/u/54571093" # avatar in about page
+  about_you: Server Owner. Totally a real person. # short description about you in about page
+  date_format: "%b %d" # date format of posts in home page
+  back_to: "Home" # In the post page, you have a back button above the title, you can custom the text by yourself.
+
+  # generate social links in about page.
+  social_links:
+    # twitter:
+    github: The-Valley-Discord
+    discord: discord.gg/egg-irl
+    rss: RSS
+    # dribbble:
+    # facebook: 
+    # flickr:
+    # instagram:
+    # linkedin:
+    # pinterest:
+    # youtube:
+    # youtube_channel:
+    # youtube_channel_name:
+    # telegram:
+    # googleplus:
+    # microdotblog:
+    reddit: /r/egg-irl
+
+    # Mastodon instances
+    # mastodon:
+    # - username:
+    #   instance:
+    # - username:
+    #   instance:
+
+
+# Build settings
+remote_theme: huangyz0918/moving
+theme: moving # note, please use huangyz0918/moving if you want to publish to Github Pages.
+
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
