--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Valley Blog
 author: The Titanium Egg
 # email:
-url: /
+url: https://the-valley-discord.github.io/
 description: >
   The Official Valley Discord Blog
 favicon: "./favicon.ico" # set the favicon of the site
@@ -46,7 +46,6 @@ moving:
 
 # Build settings
 remote_theme: huangyz0918/moving
-theme: moving # note, please use huangyz0918/moving if you want to publish to Github Pages.
 
 plugins:
   - jekyll-feed
