Updated about page

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Valley Blog
-author: The Titanium Egg
+author: The Valley Mod Team
 # email:
 url: https://the-valley-discord.github.io/
 description: >
