--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Valley Blog
 author: The Valley Mod Team
 # email:
 discord: egg-irl
-url: https://the-valley-discord.github.io/
+url: https://the-valley-discord.github.io
 description: >
   The Official Valley Discord Blog
 favicon: "./favicon.ico" # set the favicon of the site
