--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 moving:
   avatar_url: "https://avatars2.githubusercontent.com/u/54571093" # avatar in about page
-  about_you: Server Owner. Totally a real person. # short description about you in about page
+  about_you: The official egg_irl community server. # short description about you in about page
   date_format: "%b %d" # date format of posts in home page
   back_to: "Home" # In the post page, you have a back button above the title, you can custom the text by yourself.
 
