--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Valley Blog
-author: The Valley Mod Team
+author: The Valley Discord Server
 # email:
 discord: egg-irl
 url: https://the-valley-discord.github.io
