--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ moving:
   social_links:
     # twitter:
     github: The-Valley-Discord
-    discord: BXjwjN7
+    discord: egg-irl
     rss: RSS
     # dribbble:
     # facebook:
