--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ moving:
   back_to: Home
   social_links:
     github: The-Valley-Discord
-    discord: egg-irl
+    discord: BXjwjN7
     rss: RSS
     reddit: r/egg-irl
 remote_theme: huangyz0918/moving
