--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ collections:
     title: Uploads
     output: true
 author: The Valley Discord Server
-discord: egg-irl
+discord: BXjwjN7
 url: https://the-valley-discord.github.io
 description: 'The Official Valley Discord Blog
 
